got mongoose working
